fix hand cursor not showing up

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -11,3 +11,9 @@ figure,input,a{
 body,p,h2,h3,dl,dd{
   margin: 0;
 }
+
+a,
+a h1,
+button {
+    cursor: pointer;
+}
